# sysml-lint

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
crates/sysml-bom/: Cargo.toml
crates/sysml-bom/src/: lib.rs
crates/sysml-capa/: Cargo.toml
crates/sysml-capa/src/: capa.rs  lib.rs  rca.rs
crates/sysml-cli/: Cargo.toml
crates/sysml-cli/src/: cli.rs  helpers.rs  main.rs  output.rs
crates/sysml-cli/src/commands/: add.rs  analyze.rs  bom.rs  capa.rs  check.rs  deps.rs  diagram.rs  doc.rs  find.rs  help_topics.rs  index.rs  init.rs  mfg.rs  mod.rs  qc.rs  quality.rs  rename.rs  repl.rs  report.rs  risk.rs  rollup.rs  scaffold.rs  show.rs  source.rs  tol.rs  verify.rs
crates/sysml-cli/tests/: cli.rs
crates/sysml-core/: Cargo.toml  build.rs
crates/sysml-core/src/: cache.rs  config.rs  diagnostic.rs  index.rs  interactive.rs  lib.rs  model.rs  parser.rs  project.rs  qualified_name.rs  query.rs  record.rs  resolver.rs
crates/sysml-core/src/checks/: calculations.rs  constraints.rs  mod.rs  references.rs
crates/sysml-core/src/codegen/: edit.rs  mod.rs  template.rs
crates/sysml-core/src/diagram/: builders.rs  emitters.rs  graph.rs  mod.rs
crates/sysml-core/src/export/: fmi.rs  mod.rs  modelica.rs  ssp.rs
crates/sysml-core/src/sim/: action_parser.rs  analysis.rs  constraint_eval.rs  eval.rs  mod.rs  resolve.rs  rollup.rs  state_machine.rs  state_parser.rs  state_sim.rs  what_if.rs
crates/sysml-core/test/fixtures/: simulation.sysml
crates/sysml-core/tests/: integration.rs
crates/sysml-lsp/: Cargo.toml
crates/sysml-lsp/src/: code_actions.rs  completion.rs  convert.rs  diagnostics.rs  document_highlight.rs  document_symbols.rs  folding.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  main.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  state.rs  type_hierarchy.rs  workspace_symbols.rs
crates/sysml-mfg/: Cargo.toml
crates/sysml-mfg/src/: lib.rs
crates/sysml-qc/: Cargo.toml
crates/sysml-qc/src/: lib.rs
crates/sysml-report/: Cargo.toml
crates/sysml-report/src/: lib.rs
crates/sysml-risk/: Cargo.toml
crates/sysml-risk/src/: lib.rs
crates/sysml-scaffold/: Cargo.toml
crates/sysml-scaffold/src/: lib.rs
crates/sysml-source/: Cargo.toml
crates/sysml-source/src/: lib.rs
crates/sysml-tol/: Cargo.toml
crates/sysml-tol/src/: lib.rs
crates/sysml-verify/: Cargo.toml
crates/sysml-verify/src/: lib.rs
docs/: architecture.md  ci-integration.md  domain-libraries.md  tutorial.md  validation.md
docs/commands/: analysis.md  diagrams.md  editing.md  lifecycle.md  project.md  simulation.md
libraries/: sysml-bom.sysml  sysml-capa.sysml  sysml-manufacturing.sysml  sysml-project.sysml  sysml-quality.sysml  sysml-risk.sysml  sysml-tolerance.sysml  sysml-verification-ext.sysml
src/: diagnostic.rs  lib.rs  main.rs  model.rs  output.rs  parser.rs
src/checks/: duplicates.rs  mod.rs  ports.rs  references.rs  requirements.rs  syntax.rs
src/sim/: action_exec.rs  action_flow.rs  action_parser.rs  expr.rs  expr_parser.rs  state_machine.rs  state_parser.rs
test/fixtures/: analysis-trade.sysml  rollup-vehicle.sysml
tests/: integration.rs
