[package]
name = "sysml-lint"
version = "0.1.0"
edition = "2021"
description = "SysML v2 model validator and linter"
license = "GPL-3.0-or-later"
repository = "https://github.com/jackhale98/sysml-lint"

[dependencies]
tree-sitter = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"

[[bin]]
name = "sysml-lint"
path = "src/main.rs"
