[package]
name = "sysml-cli"
version = "0.3.0"
edition = "2021"
description = "SysML v2 command-line tool for validation, simulation, diagram generation, and model management"
license = "GPL-3.0-or-later"
repository = "https://github.com/jackhale98/sysml-cli"

[dependencies]
sysml-core = { path = "../sysml-core" }
sysml-verify = { path = "../sysml-verify" }
sysml-scaffold = { path = "../sysml-scaffold" }
sysml-risk = { path = "../sysml-risk" }
sysml-tol = { path = "../sysml-tol" }
sysml-bom = { path = "../sysml-bom" }
sysml-source = { path = "../sysml-source" }
sysml-mfg = { path = "../sysml-mfg" }
sysml-qc = { path = "../sysml-qc" }
sysml-capa = { path = "../sysml-capa" }
sysml-report = { path = "../sysml-report" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "sysml"
path = "src/main.rs"
