[package]
name = "sysml-cli"
version = "0.5.0"
edition = "2021"
description = "SysML v2 command-line tool for validation, simulation, diagram generation, and model analysis"
license = "GPL-3.0-or-later"
repository = "https://github.com/jackhale98/sysml-cli"

[features]
default = []
sqlite = ["sysml-core/sqlite"]

[dependencies]
sysml-core = { path = "../sysml-core" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "sysml"
path = "src/main.rs"
