[package]
name = "sysml-core"
version = "0.3.0"
edition = "2021"
description = "SysML v2 parser, validator, simulator, and model query engine"
license = "GPL-3.0-or-later"
repository = "https://github.com/jackhale98/sysml-cli"

[dependencies]
tree-sitter = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"
