[package]
name = "sysml-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sysml-lsp"
path = "src/main.rs"

[dependencies]
sysml-core = { path = "../sysml-core" }
tree-sitter = "0.26"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
