[package]
name = "sysml-qc"
version = "0.3.0"
edition = "2021"
description = "Quality control domain for SysML v2 models"
license = "GPL-3.0-or-later"
repository = "https://github.com/jackhale98/sysml-cli"

[dependencies]
sysml-core = { path = "../sysml-core" }
serde = { version = "1", features = ["derive"] }
